[package]
name = "yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# csr is for client side rendering, not needed if making a lib
yew = { version = "0.20", features = ["csr"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
getrandom = { version = "0.2", features = ["js"] }
